--- a/less_2_intro/task2/src/index.html
+++ b/less_2_intro/task2/src/index.html
@@ -2,8 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Condition rendering</title>
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0"
+    />
+    <title>Redux</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.css"
@@ -11,7 +14,23 @@
       crossorigin="anonymous"
     />
   </head>
+
   <body>
-    <div id="root"></div>
+    <div class="page">
+      <div class="counter">
+        <span class="counter__result"></span>
+        <div class="counter__actions">
+          <button data-action="decrement" class="counter__button">
+            -1
+          </button>
+          <button data-action="reset" class="counter__button">
+            Reset
+          </button>
+          <button data-action="increment" class="counter__button">
+            +1
+          </button>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
